--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.DS_Store
+# Swift
 /.build
 /Packages
 xcuserdata/
@@ -6,4 +6,12 @@ DerivedData/
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
+
+# IDE
 .vscode/
+
+# Frameworks
+Frameworks/
+
+# Misc
+.DS_Store
